feat: Reorganized structure and created contractor routing

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -20,6 +20,7 @@
   },
   "detailsProjects": {
     "details": "Details",
+    "reports": "Reports",
     "materials": "Materials",
     "workers": "Workers",
     "incidents": "Incidents",
