--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -20,6 +20,7 @@
   },
   "detailsProjects": {
     "details": "Detalles",
+    "reports": "Reportes",
     "materials": "Materiales",
     "workers": "Trabajadores",
     "incidents": "Incidentes",
