--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -43,6 +43,7 @@
     "quantity_exit": "Quantity Exit",
     "stock": "Stock",
     "unit_price": "Unit Price",
+    "price": "Price",
     "unit": "Unit",
     "provider": "Provider",
     "provider_ruc": "Provider RUC",
@@ -240,6 +241,20 @@
       "submit": "Save",
       "update": "Update"
     }
+  },
+  "reports": {
+    "title": "Reports",
+    "week_report": "Weekly Report",
+    "data_principal": "Main Data",
+    "download": "Download",
+    "project_name": "Project Name",
+    "project_id": "Project ID",
+    "supervisor_name": "Supervisor",
+    "contractor_name": "Contractor",
+    "done_tasks": "Done Tasks",
+    "entry_materials": "Entry Materials",
+    "exit_materials": "Exit Materials",
+    "incidents": "Incidents"
   }
 
 }
