--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -40,7 +40,6 @@
     "material_id": "Código",
     "name": "Nombre",
     "quantity": "Cantidad",
-    "quantity_exit": "Cantidad de Salida",
     "stock": "Existencia",
     "unit_price": "Precio Unitario",
     "unit": "Unidad",
@@ -237,19 +236,22 @@
       "update": "Actualizar"
     }
   },
-  "reports": {
-    "title": "Reportes",
-    "week_report": "Reporte Semanal",
-    "data_principal": "Datos Principales",
-    "download": "Descargar",
-    "project_name": "Nombre del proyecto",
-    "project_id": "ID del proyecto",
-    "supervisor_name": "Supervisor",
-    "contractor_name": "Contratante",
-    "done_tasks": "Tareas Completadas",
-    "entry_materials": "Materiales que entraron",
-    "exit_materials": "Materiales que salieron",
-    "incidents": "Incidentes"
+  "profile": {
+    "title": "Configuración de Usuario",
+    "name": "Nombre",
+    "email": "Correo",
+    "image": "Imagen de perfil",
+    "save": "Guardar cambios",
+    "accessibility": "Preferencias de Accesibilidad",
+    "dark_mode": "Modo Oscuro",
+    "high_contrast": "Contraste Alto",
+    "increase_font": "Aumentar Fuente",
+    "reset_font": "Resetear Fuente",
+    "back": "← Volver al panel principal",
+    "saved_message": " Datos guardados exitosamente.",
+    "placeholder_name": "Inserte su nombre",
+    "placeholder_email": "Ingrese su correo electrónico",
+    "placeholder_image": "Ingrese la URL de su imagen de perfil"
   }
 
 }
