feat: added Project and User endpoints

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -16,7 +16,8 @@
       "Active": "Active",
       "Paused": "Paused",
       "Completed": "Completed"
-    }
+    },
+    "contractor_id": "Contractor ID"
   },
   "detailsProjects": {
     "details": "Details",
