--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -16,7 +16,8 @@
       "Active": "Activo",
       "Paused": "Pausado",
       "Completed": "Completado"
-    }
+    },
+    "contractor_id": "ID del Contratante"
   },
   "detailsProjects": {
     "details": "Detalles",
